# aws-org-tree

./: .actrc  .pre-commit-config.yaml  CHANGELOG.md  README.md  aws_org_graph.py  aws_org_tree.py  building-a-hierarchy-bridge-table.md  check-consistent-version  conftest.py  draw_org.py  org_types.py  pyproject.toml  test_build_org_tree.py  test_moto_pagination.py  test_paginated_accounts.py  test_paginated_units.py  traversal.py  traverse_org.py
.github/workflows/: pre-commit.yaml  publish-to-pypi.yaml  publish.yaml  release.yaml
aws_org_tree/: __main__.py  aws_org_tree.py
tests/: README.md  test_cli.py  test_main.py
