[tool.poetry]
name = "aws-org-tree"
version = "0.2.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.scripts]
aws-org-tree = "aws_org_tree:main"

[tool.poetry.dependencies]
python = ">=3.8,<4"
boto3 = "^1.18.50"
anytree = "^2.8.0"
logdecorator = "^2.2"
boto-collator-client = "^0.1.1"
networkx = "^2.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipdb = "^0.13.9"
moto = "^3.1.4"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
