[tool.poetry]
name = "aws-org-tree"
version = "0.3.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]
readme = "README.md"
repository = "https://github.com/iainelder/aws-org-tree"
packages = [{include = "aws_org_tree"}]

[tool.poetry.scripts]
aws-org-tree = "aws_org_tree.aws_org_tree:main"

[tool.poetry.dependencies]
python = ">=3.8,<4"
boto3 = "^1.18.50"
anytree = "^2.8.0"
logdecorator = "^2.2"
networkx = "^2.8"
matplotlib = "^3.5.1"
boto3-stubs = {extras = ["organizations"], version = "^1.21.42"}

# Hint to the Poetry resolver to resolve boto3 correctly.
# Otherwise there is a conflict between botocore and urllib3.
# Keep this until the botocore issue is resolved.
# Follow https://github.com/boto/botocore/issues/2926 for details.
urllib3 = "<2"
mypy-boto3-organizations = "^1.26.83"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipdb = "^0.13.9"
moto = "^3.1.4"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
cli-test-helpers = "^3.4.0"
pytest = "^7.3.2"

[tool.isort]
profile = "black"

[tool.mypy]
files = "aws_org_tree.py"
strict = true
# Logdecorator uses untyped decorators.
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["logdecorator", "anytree", "anytree.exporter", "cli_test_helpers"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
